--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/6d6b9d1d60.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,5 +29,6 @@
   </head>
   <body>
     <h1>Abebe beso bela</h1>
+    <i class="fa-brands fa-instagram"></i>
   </body>
 </html>
