--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Poppins:wght@400;700&family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -18,17 +25,15 @@
       src="https://kit.fontawesome.com/6d6b9d1d60.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Poppins:wght@400;700&family=Roboto:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/style.css" />
-    <title>Document</title>
+
+    <title>Portfolio</title>
   </head>
   <body>
-    <h1>Abebe beso bela</h1>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="first">
+      <p>👋Hi, I am</p>
+      <h1>Zufan Ayalew</h1>
+      <h2 class="mb-4">Frontend Developer, based in Ethiopia</h2>
+      <a href="#" class="btn btn-primary">Get Started</a>
+    </div>
   </body>
 </html>
