--- a/index.html
+++ b/index.html
@@ -35,5 +35,12 @@
       <h2 class="mb-4">Frontend Developer, based in Ethiopia</h2>
       <a href="#" class="btn btn-primary">Get Started</a>
     </div>
+    <p>Featured Project mhich my best projects be choice to show</p>
+    <h2>Briquette Project</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia,
+      dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet
+      alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+    </p>
   </body>
 </html>
