--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
       dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet
       alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
     </p>
+    <a href="">Learn more</a>
   </body>
 </html>
