added homepage content

--- a/index.html
+++ b/index.html
@@ -35,13 +35,44 @@
       <h2 class="mb-4">Frontend Developer, based in Ethiopia</h2>
       <a href="#" class="btn btn-primary">Get Started</a>
     </div>
-    <p>Featured Project mhich my best projects be choice to show</p>
-    <h2>Briquette Project</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia,
-      dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet
-      alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+    <p class="text-center m-5">
+      Featured Project mhich my best projects be choice to show
     </p>
-    <a href="">Learn more</a>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/briquette.jpg" class="img-fluid me-5" />
+        </div>
+        <div class="col">
+          <div class="description mb-5 mt-5">
+            <h2 class="mb-4">Briquette Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="" class="btn btn-primary">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col">
+          <div class="description">
+            <h2 class="mb-4">weather Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="" class="btn btn-primary">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.jpg" class="img-fluid me-5" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
