--- a/work.html
+++ b/work.html
@@ -25,26 +25,26 @@
       src="https://kit.fontawesome.com/6d6b9d1d60.js"
       crossorigin="anonymous"
     ></script>
-    <title>About</title>
+    <title>Work</title>
   </head>
   <body>
-    <div class="container about">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="about-content">
-            <h1 class="mb-3">Hi I am Zufan Ayalew</h1>
-            <h2 class="mb-5">Frontend Developer, based in Ethiopia</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
-            </p>
-            <a href="" class="btn btn-primary">See my projects</a>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-lg-6 mb-5">
+            <img src="images/briquette.jpg" class="img-fluid mb-3" />
+            <h3 class="text-center">Briquette Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/My Photo.jpg" class="img-fluid" />
+
+          <div class="col-lg-6">
+            <img src="images/Weather.jpg" class="img-fluid mb-4" />
+            <h3 class="text-center">Weather App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and JavaScript
+            </p>
+          </div>
         </div>
       </div>
     </div>
