created contact page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/logo.png" />
+        <ul>
+          <li>
+            <a href="">Home</a>
+          </li>
+          <li>
+            <a href="">About</a>
+          </li>
+          <li>
+            <a href="">Work</a>
+          </li>
+          <li>
+            <a href=""> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="first">
       <p>👋Hi, I am</p>
       <h1>Zufan Ayalew</h1>
