--- a/index.html
+++ b/index.html
@@ -31,19 +31,20 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="images/logo.png" />
+        <img src="images/logo.png" class="logo d-none d-md-block" />
+        <img src="images/small-logo.jpg" class="logo d-block d-md-none" />
         <ul>
-          <li>
+          <li class="active">
             <a href="">Home</a>
           </li>
           <li>
-            <a href="">About</a>
+            <a href="/about.html">About</a>
           </li>
           <li>
-            <a href="">Work</a>
+            <a href="/work.html">Work</a>
           </li>
           <li>
-            <a href=""> Contact</a>
+            <a href="/contact.html">Contact</a>
           </li>
         </ul>
       </nav>
