--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
           <img src="images/weather.jpg" class="img-fluid me-5" />
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center">
+          <a href="mailto:zufanllw@gmail.com" class="email-link"
+            >zufanllw@gmail.com
+          </a>
+        </div>
+        <div class="social-links text-center">
+          <a href=""><i class="fa-brands fa-instagram"></i></a
+          ><a href=""><i class="fa-brands fa-linkedin"></i></a
+          ><a href=""><i class="fa-brands fa-github"></i></a>
+        </div>
+        <br />
+      </footer>
     </div>
   </body>
 </html>
