--- a/index.html
+++ b/index.html
@@ -94,15 +94,32 @@
         </div>
       </div>
       <footer>
-        <div class="d-flex justify-content-center">
+        <div
+          class="contact-box d-flex justify-content-between d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">
+              Let's work together and I'll help you by all my best
+            </p>
+          </div>
+          <div>
+            <a href="" class="btn btn-primary">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
           <a href="mailto:zufanllw@gmail.com" class="email-link"
             >zufanllw@gmail.com
           </a>
         </div>
-        <div class="social-links text-center">
-          <a href=""><i class="fa-brands fa-instagram"></i></a
-          ><a href=""><i class="fa-brands fa-linkedin"></i></a
-          ><a href=""><i class="fa-brands fa-github"></i></a>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.instagram.com/xuu5356?igsh=MWR0MHUyNXdtcDh3OQ=="
+            ><i class="fa-brands fa-instagram"></i></a
+          ><a href="https://www.linkedin.com/in/zufan-ayalew-68b822245"
+            ><i class="fa-brands fa-linkedin"></i></a
+          ><a href="https://github.com/zufanayalew135"
+            ><i class="fa-brands fa-github"></i
+          ></a>
         </div>
         <br />
       </footer>
