--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About Zufan. Zufan is a front-end developer based in Ethiopia."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,9 +29,29 @@
       src="https://kit.fontawesome.com/6d6b9d1d60.js"
       crossorigin="anonymous"
     ></script>
-    <title>About</title>
+    <title>About Zufan</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/logo.png" class="logo d-none d-md-block" />
+        <img src="images/small-logo.jpg" class="logo d-block d-md-none" />
+        <ul>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/work.html">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="container about">
       <div class="row">
         <div class="col-lg-6">
@@ -40,13 +64,46 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="" class="btn btn-primary">See my projects</a>
+            <a href="/work.html" class="btn btn-primary">See my projects</a>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 mb-5">
           <img src="images/My Photo.jpg" class="img-fluid" />
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">
+              Let's work together and I'll help you by all my best
+            </p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-primary">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:zufanllw@gmail.com" class="email-link"
+            >zufanllw@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/xuu5356?igsh=MWR0MHUyNXdtcDh3OQ=="
+            target="_blank"
+            ><i class="fa-brands fa-instagram"></i></a
+          ><a
+            href="https://www.linkedin.com/in/zufan-ayalew-68b822245"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i></a
+          ><a href="https://github.com/zufanayalew135" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
