--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact Zufan. Zufan is a front-end developer based in Ethiopia."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,19 +29,74 @@
       src="https://kit.fontawesome.com/6d6b9d1d60.js"
       crossorigin="anonymous"
     ></script>
-    <title>contact</title>
+    <title>Contact Zufan - Zufan Ayalew</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/logo.png" class="logo d-none d-md-block" />
+        <img src="images/small-logo.jpg" class="logo d-block d-md-none" />
+        <ul>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/work.html">Work</a>
+          </li>
+          <li class="active">
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <a href="mailto:zufanllw@gmail.com">zufanllw@gmail.com</a>
         <h3>Linkedin</h3>
-        <a href="https://www.linkedin.com/in/zufan-ayalew-68b822245"
+        <a
+          href="https://www.linkedin.com/in/zufan-ayalew-68b822245"
+          target="_blank"
           >Zufan Ayalew</a
         >
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">
+              Let's work together and I'll help you by all my best
+            </p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-primary">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:zufanllw@gmail.com" class="email-link"
+            >zufanllw@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/xuu5356?igsh=MWR0MHUyNXdtcDh3OQ=="
+            target="_blank"
+            ><i class="fa-brands fa-instagram"></i></a
+          ><a
+            href="https://www.linkedin.com/in/zufan-ayalew-68b822245"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i></a
+          ><a href="https://github.com/zufanayalew135" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
