--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Zufan is front-end developer based in Ethiopia."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +30,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Portfolio</title>
+    <title>Front-end developer - Zufan Ayalew</title>
   </head>
   <body>
     <div class="container">
@@ -35,7 +39,7 @@
         <img src="images/small-logo.jpg" class="logo d-block d-md-none" />
         <ul>
           <li class="active">
-            <a href="">Home</a>
+            <a href="/">Home</a>
           </li>
           <li>
             <a href="/about.html">About</a>
@@ -53,10 +57,10 @@
       <p>👋Hi, I am</p>
       <h1>Zufan Ayalew</h1>
       <h2 class="mb-4">Frontend Developer, based in Ethiopia</h2>
-      <a href="#" class="btn btn-primary">Get Started</a>
+      <a href="/contact.html" class="btn btn-primary">Get Started</a>
     </div>
     <p class="text-center m-5">
-      Featured Project mhich my best projects be choice to show
+      Featured Project which my best projects be choice to show
     </p>
     <div class="container">
       <div class="row mb-5">
@@ -72,7 +76,7 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="" class="btn btn-primary">Learn more</a>
+            <a href="/work.html" class="btn btn-primary">Learn more</a>
           </div>
         </div>
       </div>
@@ -86,7 +90,7 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="" class="btn btn-primary">Learn more</a>
+            <a href="/work.html" class="btn btn-primary">Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -104,7 +108,7 @@
             </p>
           </div>
           <div>
-            <a href="" class="btn btn-primary">Contact me</a>
+            <a href="/contact.html" class="btn btn-primary">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
@@ -113,15 +117,18 @@
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.instagram.com/xuu5356?igsh=MWR0MHUyNXdtcDh3OQ=="
+          <a
+            href="https://www.instagram.com/xuu5356?igsh=MWR0MHUyNXdtcDh3OQ=="
+            target="_blank"
             ><i class="fa-brands fa-instagram"></i></a
-          ><a href="https://www.linkedin.com/in/zufan-ayalew-68b822245"
+          ><a
+            href="https://www.linkedin.com/in/zufan-ayalew-68b822245"
+            target="_blank"
             ><i class="fa-brands fa-linkedin"></i></a
-          ><a href="https://github.com/zufanayalew135"
+          ><a href="https://github.com/zufanayalew135" target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
-        <br />
       </footer>
     </div>
   </body>
